# android-sparse-rs

./: .gitlab-ci.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: block.rs  constants.rs  convert.rs  decoder.rs  encoder.rs  ext.rs  file.rs  headers.rs  lib.rs  read.rs  reader.rs  result.rs  write.rs  writer.rs
tests/: cli.rs  read.rs  write.rs
tests/data/: crc.simg  decoded.img  hello.img  hello.simg  invalid_crc.simg
tests/util/: mod.rs
