[package]
name = "android-sparse"
version = "0.6.0"
authors = ["Jan Teske <jteske@posteo.net>"]
description = "An implementation of Android's sparse file format."
repository = "https://gitlab.com/ra_kete/android-sparse-rs"
readme = "README.md"
keywords = ["android", "sparse"]
categories = ["command-line-utilities", "compression", "parsing"]
license = "MIT"
edition = "2021"

[dependencies]
byteorder = "1"
crc = "1"

[dependencies.clap]
version = "2"
default-features = false

[dev-dependencies]
assert_cmd = "0.9"
tempfile = "3"

[badges]
gitlab = { repository = "ra_kete/android-sparse-rs" }
