[package]
name = "android-sparse"
version = "0.6.0"
authors = ["Jan Teske <jteske@posteo.net>", "David Arsene"]
description = "An implementation of Android's sparse file format."
license = "MIT"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
argh = "0.1"
byteorder = "1"

[dependencies.crc32fast]
version = "1"
features = ["nightly"]

[dependencies.indicatif]
version = "0.17"
default-features = false

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
